@@ -1,4 +1,7 @@
 
+2009-04-10 12:24 Ali aliov@xfce.org 
+	 * : Provide a wake up signal to avoid possible multiple sleep/hibernate request
+
 2009-04-10 12:00 Ali aliov@xfce.org 
 	 * : Fall back to HAL in case we fail to map X11 keys
 
